@@ -7,12 +7,11 @@ Package {
      hs_libraries    = ["HSsourceview"],
      extra_libraries = [@SOURCEVIEW_LIBS_CQ@],
      include_dirs    = [@SOURCEVIEW_CFLAGS_CQ@],
-     c_includes      = ["gtksourceview/gtksourceview.h",
-                        "gtksourceview/gtksourcemarker.h",
-			"gtksourceview/gtksourcelanguagesmanager.h",
-			"gtksourceview/gtksourcetag.h",
-			"gtksourceview/gtksourcemarker.h",
-			"gtksourceview/gtksourceiter.h"],
+     c_includes      = ["gtksourceview/gtksourcemarker.h",
+                        "gtksourceview/gtksourcelanguagesmanager.h",
+                        "gtksourceview/gtksourcetag.h",
+                        "gtksourceview/gtksourceiter.h",
+                        "gtksourceview/gtksourceview.h"],
      package_deps    = ["gtk"],
      extra_ghc_opts  = [],
      extra_cc_opts   = [],
